- Fixes for i35 and i31 - Refactoring from Guava to Java Streams API